# radar-camera-fusion

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_local.txt  Readme.md  cv2_pipeline.py  startup.sh
assets/configs/: bev_calib.txt
assets/configs/BR01FU9650/: BR01FU9650-640x640.yaml  BR01FU9650_coneProjection-6x1Meters-1920x1020.yaml
assets/models/: .gitignore
assets/opencv-files/: normalize_bbox.hpp
assets/scooter-calibration-files/BR01FU9650/: BR01FU9650-1920x1020.yaml
assets/scooter-calibration-files/BR01FU9652/: BR01FU9652-1920x1020.yaml  BR01FU9652-640x640.yaml
docker/: Dockerfile
include/: detection.h  inference.h  main.h  utils.hpp
include/BEVTransform/: birdview_model.h  birdview_transform.hpp  camera_model.h
include/ByteTrack/: BYTETracker.h
models/: .gitignore
src/: birdview_model.cpp  camera_model.cpp  detection.cpp  main.cpp  main_bak.cpp  main_stream.cpp  main_threads.cpp  radar_camera_projection.py
